--- a/contactanos.html
+++ b/contactanos.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="banner">
-        <a href="/index.html" class="logo"><img src="./Recurso 1.png" /></a>
+        <a href="mainpage.html" class="logo"><img src="./fotos/Recurso 1.png" /></a>
 
         <div class="busqueda">
             <input type="text" placeholder="¿Qué estas buscando?">
@@ -27,7 +27,7 @@
                 <a href="contactanos.html">Contactanos</a>
             </div>
             <div>
-                <a href="">Tienda</a>
+                <a href="tienda.html">Tienda</a>
             </div>
         </div>
     </header>
@@ -42,7 +42,7 @@
         
     <div class="contactanos">
         <div class="tarjeta">
-          <img alt="Imagen de Isabela Calvo" src="./PikPng.com_rapunzel-png_1112178.png"/>
+          <img alt="Imagen de Isabela Calvo" src="./fotos/PikPng.com_rapunzel-png_1112178.png"/>
           <h2>
            Isabela Calvo
           </h2>
@@ -67,7 +67,7 @@
           </div>
          </div>
          <div class="tarjeta">
-          <img alt="Imagen de Mariana Parra" height="80" src="./marie ft de perfil.jpeg" width="80"/>
+          <img alt="Imagen de Mariana Parra" height="80" src="./fotos/marie ft de perfil.jpeg" width="80"/>
           <h2>
            Mariana Parra
           </h2>
