--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>  
     <!-- Aqui va la navegacion -->
     <header class="banner">
-        <a href="/index.html" class="logo"><img src="./logo1.png" /></a>
+        <a href="mainpage.html" class="logo"><img src="./fotos/logo1.png" /></a>
 
         <div class="busqueda">
             <input type="text" placeholder="¿Qué estas buscando?">
@@ -25,7 +25,7 @@
                 <a href="contactanos.html">Contactanos</a>
             </div>
             <div>
-                <a href="">Tienda</a>
+                <a href="tienda.html">Tienda</a>
             </div>
         </div>
     </header>
