--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DisneyShop</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./mainpage.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="banner">
-        <a href="/index.html" class="logo"><img src="./Recurso 1.png" /></a>
+        <a href="mainpage.html" class="logo"><img src="./fotos/Recurso 1.png" /></a>
 
         <div class="busqueda">
             <input type="text" placeholder="¿Qué estas buscando?">
@@ -27,7 +27,7 @@
                 <a href="contactanos.html">Contactanos</a>
             </div>
             <div>
-                <a href="">Tienda</a>
+                <a href="tienda.html">Tienda</a>
             </div>
         </div>
     </header>
@@ -47,10 +47,10 @@
     <div class="boxContainer">
         <div class="box">
             <div class="image">
-                <a href="file:///Users/isacalvo30/Desktop/trabajo%20final%20/index2.html"><img src="./peluche rosada sti.webp" alt="" ></a>
+                <a href="producto1.html"><img src="./fotos/peluche rosada sti.webp" alt="" ></a>
                 <div class="iconos"> 
                     <a href="#" class="fav" > <i class='bx bx-heart'></i> </a>
-                    <a href="file:///Users/isacalvo30/Desktop/LAB5/index2.html" class="look"> <i class='bx bx-info-circle'></i> </a>
+                    <a href="producto1.html" class="look"> <i class='bx bx-info-circle'></i> </a>
 
                 </div>
             </div>
@@ -62,10 +62,10 @@
 
         <div class="box">
             <div class="image">
-                <a href="file:///Users/isacalvo30/Desktop/trabajo%20final%20/index3.html"><img src="./peluche mickey.webp" alt="" ></a>
+                <a href="producto2.html"><img src="./fotos/peluche mickey.webp" alt="" ></a>
                 <div class="iconos"> 
-                    <a href="file:///Users/isacalvo30/Desktop/LAB5/index3.html" class="fav" > <i class='bx bx-heart'></i> </a>
-                    <a href="file:///Users/isacalvo30/Desktop/LAB5/index3.html" class="look"> <i class='bx bx-info-circle'></i> </a>
+                    <a href="" class="fav" > <i class='bx bx-heart'></i> </a>
+                    <a href="producto2.html" class="look"> <i class='bx bx-info-circle'></i> </a>
 
                 </div>
             </div>
@@ -78,10 +78,10 @@
 
         <div class="box">
             <div class="image">
-                <a href="file:///Users/isacalvo30/Desktop/trabajo%20final%20/index4.html"> <img src="./tristeza peluche .webp" alt="" > </a>
+                <a href="producto3.html"> <img src="./fotos/tristeza peluche .webp" alt="" > </a>
                 <div class="iconos"> 
-                    <a href="file:///Users/isacalvo30/Desktop/LAB5/index4.html" class="fav" > <i class='bx bx-heart'></i> </a>
-                    <a href="file:///Users/isacalvo30/Desktop/LAB5/index4.html" class="look"> <i class='bx bx-info-circle'></i> </a>
+                    <a href="" class="fav" > <i class='bx bx-heart'></i> </a>
+                    <a href="producto3.html" class="look"> <i class='bx bx-info-circle'></i> </a>
 
                 </div>
             </div>
