--- a/producto2.html
+++ b/producto2.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mickey clasico</title>
-    <link rel="stylesheet" href="./indexArticulo.css">
+    <link rel="stylesheet" href="./productos.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="banner">
-        <a href="file:///Users/isacalvo30/Desktop/trabajo%20final%20/index.html" class="devolverse"><i class='bx bx-chevrons-left'></i> <h3> Volver </h3></a>
+        <a href="tienda.html" class="devolverse"><i class='bx bx-chevrons-left'></i> <h3> Volver </h3></a>
 
     </header>
 
@@ -18,17 +18,17 @@
         <div class="pequeñas">
 
            <div class="primeraft"> 
-            <img src="./peluche mickey sentado.webp" alt="espaldas">
+            <img src="./fotos/peluche mickey sentado.webp" alt="espaldas">
            </div> 
 
            <div class="segundaft">
-            <img src="./mickey jugando.webp" alt="oreja">
+            <img src="./fotos/mickey jugando.webp" alt="oreja">
             </div>
 
         </div>
 
         <div class="ftPrincipal">
-            <img src="./peluche mickey.webp" alt="">
+            <img src="./fotos/peluche mickey.webp" alt="">
         </div>
         <div class="informacionPeluche">
             <div class="texto">
@@ -46,7 +46,6 @@
 
             <div class="iconos">
                 <a href="#" class="fav" > <i class='bx bx-heart'></i> </a>
-                <a href="#" class="look"> <i class='bx bx-info-circle'></i> </a>
 
 
             </div>
