--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
     <body>  
         <!-- Aqui va la navegacion -->
         <header class="banner">
-            <a href="/index.html" class="logo"><img src="./logo1.png" /></a>
+            <a href="mainpage.html" class="logo"><img src="./fotos/logo1.png" /></a>
     
             <div class="busqueda">
                 <input type="text" placeholder="¿Qué estas buscando?">
