--- a/producto3.html
+++ b/producto3.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angela helado</title>
-    <link rel="stylesheet" href="./indexArticulo.css">
+    <title>Tristeza</title>
+    <link rel="stylesheet" href="./productos.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="banner">
-        <a href="file:///Users/isacalvo30/Desktop/trabajo%20final%20/index5.html#" class="devolverse"><i class='bx bx-chevrons-left'></i> <h3> Volver </h3></a>
+        <a href="tienda.html" class="devolverse"><i class='bx bx-chevrons-left'></i> <h3> Volver </h3></a>
 
     </header>
 
@@ -18,35 +18,34 @@
         <div class="pequeñas">
 
            <div class="primeraft"> 
-            <img src="./stit roasda con helado de espaldas.webp" alt="espaldas">
+            <img src="./fotos/tristeza peluche de espaldas.webp" alt="espaldas">
            </div> 
 
            <div class="segundaft">
-            <img src="./stit rosada con helado de lado.webp" alt="oreja">
+            <img src="./fotos/tristeza jugando.webp" alt="oreja">
             </div>
 
         </div>
 
         <div class="ftPrincipal">
-            <img src="./principal stit rosada con helado.webp" alt="">
+            <img src="./fotos/tristeza peluche .webp" alt="">
         </div>
         <div class="informacionPeluche">
             <div class="texto">
-                <h1> Angel comiendo helado </h1>
-            <h4> $27.900 </h4>
+                <h1> Tristeza (Intesamente 2) </h1>
+            <h4> $35.900 </h4>
             <hr>
             <h3> Magia en cada detalle </h3>
             <ul>
-                <li> Relleno esponjoso </li>
-                <li> Tamaño ideal </li>
-                <li> Diseño detallado </li>
+                <li> Costuras reforzadas </li>
+                <li> Colores vibrantes </li>
+                <li> Facil de lavar </li>
             </ul> 
             <hr>
 
 
             <div class="iconos">
                 <a href="#" class="fav" > <i class='bx bx-heart'></i> </a>
-                <a href="#" class="look"> <i class='bx bx-info-circle'></i> </a>
 
 
             </div>
